@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -76,7 +76,10 @@ import javax.lang.model.type.TypeMirror;
 import static jdk.internal.jshell.debug.InternalDebugControl.DBG_COMPA;
 
 import java.io.IOException;
+import java.net.MalformedURLException;
 import java.net.URI;
+import java.net.URISyntaxException;
+import java.net.URL;
 import java.nio.file.DirectoryStream;
 import java.nio.file.FileSystem;
 import java.nio.file.FileSystems;
@@ -99,11 +102,14 @@ import java.util.Set;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.function.Function;
+import java.util.function.Supplier;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
+import static java.util.stream.Collectors.collectingAndThen;
 import static java.util.stream.Collectors.toCollection;
+import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toSet;
 
 import java.util.stream.Stream;
@@ -249,9 +255,14 @@ class SourceCodeAnalysisImpl extends SourceCodeAnalysis {
 
     @Override
     public List<Suggestion> completionSuggestions(String code, int cursor, int[] anchor) {
+        return completionSuggestions(code, cursor, CompletionContext.SNIPPET, anchor);
+    }
+
+    @Override
+    public List<Suggestion> completionSuggestions(String code, int cursor, CompletionContext context, int[] anchor) {
         suspendIndexing();
         try {
-            return completionSuggestionsImpl(code, cursor, anchor);
+            return completionSuggestionsImpl(code, cursor, context, anchor);
         } catch (Throwable exc) {
             proc.debug(exc, "Exception thrown in SourceCodeAnalysisImpl.completionSuggestions");
             return Collections.emptyList();
@@ -260,7 +271,7 @@ class SourceCodeAnalysisImpl extends SourceCodeAnalysis {
         }
     }
 
-    private List<Suggestion> completionSuggestionsImpl(String code, int cursor, int[] anchor) {
+    private List<Suggestion> completionSuggestionsImpl(String code, int cursor, CompletionContext context, int[] anchor) {
         code = code.substring(0, cursor);
         Matcher m = JAVA_IDENTIFIER.matcher(code);
         String identifier = "";
@@ -275,19 +286,27 @@ class SourceCodeAnalysisImpl extends SourceCodeAnalysis {
         if (code.trim().isEmpty()) { //TODO: comment handling
             code += ";";
         }
-        OuterWrap codeWrap = switch (guessKind(code)) {
-            case IMPORT -> proc.outerMap.wrapImport(Wrap.simpleWrap(code + "any.any"), null);
-            case CLASS, METHOD -> proc.outerMap.wrapInTrialClass(Wrap.classMemberWrap(code));
-            default -> proc.outerMap.wrapInTrialClass(Wrap.methodWrap(code));
-        };
+        OuterWrap codeWrap;
+        switch (guessKind(code)) {
+            case IMPORT:
+                codeWrap = proc.outerMap.wrapImport(Wrap.simpleWrap(code + "any.any"), null);
+                break;
+            case CLASS:
+            case METHOD:
+                codeWrap = proc.outerMap.wrapInTrialClass(Wrap.classMemberWrap(code));
+                break;
+            default:
+                codeWrap = proc.outerMap.wrapInTrialClass(Wrap.methodWrap(code));
+                break;
+        }
         String requiredPrefix = identifier;
-        return computeSuggestions(codeWrap, cursor, anchor).stream()
+        return computeSuggestions(codeWrap, cursor, context, anchor).stream()
                 .filter(s -> s.continuation().startsWith(requiredPrefix) && !s.continuation().equals(REPL_DOESNOTMATTER_CLASS_NAME))
                 .sorted(Comparator.comparing(Suggestion::continuation))
-                .toList();
+                .collect(collectingAndThen(toList(), Collections::unmodifiableList));
     }
 
-    private List<Suggestion> computeSuggestions(OuterWrap code, int cursor, int[] anchor) {
+    private List<Suggestion> computeSuggestions(OuterWrap code, int cursor, CompletionContext context, int[] anchor) {
         return proc.taskFactory.analyze(code, at -> {
             SourcePositions sp = at.trees().getSourcePositions();
             CompilationUnitTree topLevel = at.firstCuTree();
@@ -376,7 +395,7 @@ class SourceCodeAnalysisImpl extends SourceCodeAnalysis {
                             break;
                         TreePath exprPath = new TreePath(tp, expression);
                         TypeMirror site = at.trees().getTypeMirror(exprPath);
-                        boolean staticOnly = isStaticContext(at, exprPath);
+                        boolean staticOnly = isStaticContext(at, context, exprPath);
                         ImportTree it = findImport(tp);
                         boolean isImport = it != null;
 
@@ -407,7 +426,11 @@ class SourceCodeAnalysisImpl extends SourceCodeAnalysis {
                             filter = filter.and(IS_CONSTRUCTOR.negate());
                         }
 
-                        filter = filter.and(staticOnly ? STATIC_ONLY : INSTANCE_ONLY);
+                        if (context == CompletionContext.SNIPPET) {
+                            filter = filter.and(staticOnly ? STATIC_ONLY : INSTANCE_ONLY);
+                        } else {
+                            paren = NO_PAREN;
+                        }
 
                         addElements(members, filter, smartFilter, paren, result);
                         break;
@@ -494,14 +517,23 @@ class SourceCodeAnalysisImpl extends SourceCodeAnalysis {
                         addScopeElements(at, scope, IDENTITY, accept, smartFilter, result);
 
                         Tree parent = tp.getParentPath().getLeaf();
-                        accept = switch (parent.getKind()) {
-                            case VARIABLE -> ((VariableTree) parent).getType() == tp.getLeaf() ?
-                                             IS_VOID.negate() :
-                                             TRUE;
-                            case PARAMETERIZED_TYPE -> FALSE; // TODO: JEP 218: Generics over Primitive Types
-                            case TYPE_PARAMETER, CLASS, INTERFACE, ENUM -> FALSE;
-                            default -> TRUE;
-                        };
+                        switch (parent.getKind()) {
+                            case VARIABLE:
+                                accept = ((VariableTree)parent).getType() == tp.getLeaf() ?
+                                        IS_VOID.negate() :
+                                        TRUE;
+                                break;
+                            case PARAMETERIZED_TYPE: // TODO: JEP 218: Generics over Primitive Types
+                            case TYPE_PARAMETER:
+                            case CLASS:
+                            case INTERFACE:
+                            case ENUM:
+                                accept = FALSE;
+                                break;
+                            default:
+                                accept = TRUE;
+                                break;
+                        }
                         addElements(primitivesOrVoid(at), accept, smartFilter, result);
                         break;
                     }
@@ -570,7 +602,7 @@ class SourceCodeAnalysisImpl extends SourceCodeAnalysis {
     public List<SnippetWrapper> wrappers(String input) {
         return proc.eval.sourceToSnippetsWithWrappers(input).stream()
                 .map(this::wrapper)
-                .toList();
+                .collect(toList());
     }
 
     @Override
@@ -588,7 +620,11 @@ class SourceCodeAnalysisImpl extends SourceCodeAnalysis {
         return proc.maps.getDependents(snippet);
     }
 
-    private boolean isStaticContext(AnalyzeTask at, TreePath path) {
+    private boolean isStaticContext(AnalyzeTask at, CompletionContext context, TreePath path) {
+        if (context == CompletionContext.LOOKUP) {
+            //non-static methods OK in lookup:
+            return false;
+        }
         switch (path.getLeaf().getKind()) {
             case ARRAY_TYPE:
             case PRIMITIVE_TYPE:
@@ -717,6 +753,7 @@ class SourceCodeAnalysisImpl extends SourceCodeAnalysis {
     private void addElements(Iterable<? extends Element> elements, Predicate<Element> accept, Predicate<Element> smart, List<Suggestion> result) {
         addElements(elements, accept, smart, DEFAULT_PAREN, result);
     }
+
     private void addElements(Iterable<? extends Element> elements, Predicate<Element> accept, Predicate<Element> smart, Function<Boolean, String> paren, List<Suggestion> result) {
         Set<String> hasParams = Util.stream(elements)
                 .filter(accept)
@@ -819,7 +856,7 @@ class SourceCodeAnalysisImpl extends SourceCodeAnalysis {
     private List<? extends Element> membersOf(AnalyzeTask at, List<? extends Element> elements) {
         return elements.stream()
                 .flatMap(e -> membersOf(at, e.asType(), true).stream())
-                .toList();
+                .collect(toList());
     }
 
     private List<? extends Element> getEnclosedElements(PackageElement packageEl) {
@@ -833,7 +870,7 @@ class SourceCodeAnalysisImpl extends SourceCodeAnalysis {
                                 .stream()
                                 .filter(el -> el.asType() != null)
                                 .filter(el -> el.asType().getKind() != TypeKind.ERROR)
-                                .toList();
+                                .collect(toList());
             } catch (CompletionFailure cf) {
                 //ignore...
             }
@@ -848,7 +885,7 @@ class SourceCodeAnalysisImpl extends SourceCodeAnalysis {
                 TypeKind.LONG, TypeKind.SHORT, TypeKind.VOID)
                 .map(tk -> (Type)(tk == TypeKind.VOID ? types.getNoType(tk) : types.getPrimitiveType(tk)))
                 .map(Type::asElement)
-                .toList();
+                .collect(toList());
     }
 
     void classpathChanged() {
@@ -1009,7 +1046,7 @@ class SourceCodeAnalysisImpl extends SourceCodeAnalysis {
                 if (actuals == null)
                     return null;
 
-                Iterable<Pair<ExecutableElement, ExecutableType>> candidateMethods = methodCandidates(at, forPath.getParentPath());
+                Iterable<Pair<ExecutableElement, ExecutableType>> candidateMethods = methodCandidates(at, CompletionContext.SNIPPET, new TreePath(forPath.getParentPath(), mit.getMethodSelect()));
 
                 return computeSmartTypesForExecutableType(at, candidateMethods, actuals);
             }
@@ -1086,28 +1123,31 @@ class SourceCodeAnalysisImpl extends SourceCodeAnalysis {
 
     private TypeMirror resultTypeOf(Element el) {
         //TODO: should reflect the type of site!
-        return switch (el.getKind()) {
-            case METHOD -> ((ExecutableElement) el).getReturnType();
-            // TODO: INSTANCE_INIT and STATIC_INIT should be filtered out
-            case CONSTRUCTOR, INSTANCE_INIT, STATIC_INIT -> el.getEnclosingElement().asType();
-            default -> el.asType();
-        };
+        switch (el.getKind()) {
+            case METHOD:
+                return ((ExecutableElement) el).getReturnType();
+            case CONSTRUCTOR:
+            case INSTANCE_INIT: case STATIC_INIT: //TODO: should be filtered out
+                return el.getEnclosingElement().asType();
+            default:
+                return el.asType();
+        }
     }
 
     private void addScopeElements(AnalyzeTask at, Scope scope, Function<Element, Iterable<? extends Element>> elementConvertor, Predicate<Element> filter, Predicate<Element> smartFilter, List<Suggestion> result) {
         addElements(scopeContent(at, scope, elementConvertor), filter, smartFilter, result);
     }
 
-    private Iterable<Pair<ExecutableElement, ExecutableType>> methodCandidates(AnalyzeTask at, TreePath invocation) {
-        MethodInvocationTree mit = (MethodInvocationTree) invocation.getLeaf();
-        ExpressionTree select = mit.getMethodSelect();
+    private Iterable<Pair<ExecutableElement, ExecutableType>> methodCandidates(AnalyzeTask at, CompletionContext context, TreePath selectPath) {
+//        MethodInvocationTree mit = (MethodInvocationTree) invocation.getLeaf();
+        ExpressionTree select = (ExpressionTree) selectPath.getLeaf();
         List<Pair<ExecutableElement, ExecutableType>> result = new ArrayList<>();
-        Predicate<Element> accessibility = createAccessibilityFilter(at, invocation);
+        Predicate<Element> accessibility = createAccessibilityFilter(at, selectPath);
 
         switch (select.getKind()) {
             case MEMBER_SELECT:
                 MemberSelectTree mst = (MemberSelectTree) select;
-                TreePath tp = new TreePath(new TreePath(invocation, select), mst.getExpression());
+                TreePath tp = new TreePath(new TreePath(selectPath, select), mst.getExpression());
                 TypeMirror site = at.trees().getTypeMirror(tp);
 
                 if (site == null || site.getKind() != TypeKind.DECLARED)
@@ -1118,7 +1158,7 @@ class SourceCodeAnalysisImpl extends SourceCodeAnalysis {
                 if (siteEl == null)
                     break;
 
-                if (isStaticContext(at, tp)) {
+                if (isStaticContext(at, context, tp)) {
                     accessibility = accessibility.and(STATIC_ONLY);
                 }
 
@@ -1132,7 +1172,7 @@ class SourceCodeAnalysisImpl extends SourceCodeAnalysis {
                 break;
             case IDENTIFIER:
                 IdentifierTree it = (IdentifierTree) select;
-                for (ExecutableElement ee : ElementFilter.methodsIn(scopeContent(at, at.trees().getScope(invocation), IDENTITY))) {
+                for (ExecutableElement ee : ElementFilter.methodsIn(scopeContent(at, at.trees().getScope(selectPath), IDENTITY))) {
                     if (ee.getSimpleName().contentEquals(it.getName())) {
                         if (accessibility.test(ee)) {
                             result.add(Pair.of(ee, (ExecutableType) ee.asType())); //XXX: proper site
@@ -1181,10 +1221,15 @@ class SourceCodeAnalysisImpl extends SourceCodeAnalysis {
     }
 
     @Override
-    public List<Documentation> documentation(String code, int cursor, boolean computeJavadoc) {
+    public List<Documentation> documentation(String input, int cursor, boolean computeJavadoc) {
+        return documentation(input, cursor, CompletionContext.SNIPPET, computeJavadoc);
+    }
+
+    @Override
+    public List<Documentation> documentation(String code, int cursor, CompletionContext context, boolean computeJavadoc) {
         suspendIndexing();
         try {
-            return documentationImpl(code, cursor, computeJavadoc);
+            return documentationImpl(code, cursor, context, computeJavadoc);
         } catch (Throwable exc) {
             proc.debug(exc, "Exception thrown in SourceCodeAnalysisImpl.documentation");
             return Collections.emptyList();
@@ -1199,7 +1244,7 @@ class SourceCodeAnalysisImpl extends SourceCodeAnalysis {
         "-parameters"
     };
 
-    private List<Documentation> documentationImpl(String code, int cursor, boolean computeJavadoc) {
+    private List<Documentation> documentationImpl(String code, int cursor, CompletionContext context, boolean computeJavadoc) {
         code = code.substring(0, cursor);
         if (code.trim().isEmpty()) { //TODO: comment handling
             code += ";";
@@ -1229,13 +1274,13 @@ class SourceCodeAnalysisImpl extends SourceCodeAnalysis {
                 return Collections.emptyList();
 
             Stream<Element> elements;
-            Iterable<Pair<ExecutableElement, ExecutableType>> candidates;
             List<? extends ExpressionTree> arguments;
 
             if (tp.getLeaf().getKind() == Kind.METHOD_INVOCATION || tp.getLeaf().getKind() == Kind.NEW_CLASS) {
+                Iterable<Pair<ExecutableElement, ExecutableType>> candidates;
                 if (tp.getLeaf().getKind() == Kind.METHOD_INVOCATION) {
                     MethodInvocationTree mit = (MethodInvocationTree) tp.getLeaf();
-                    candidates = methodCandidates(at, tp);
+                    candidates = methodCandidates(at, context, new TreePath(tp, mit.getMethodSelect()));
                     arguments = mit.getArguments();
                 } else {
                     NewClassTree nct = (NewClassTree) tp.getLeaf();
@@ -1251,7 +1296,7 @@ class SourceCodeAnalysisImpl extends SourceCodeAnalysis {
                             this.filterExecutableTypesByArguments(at, candidates, fullActuals)
                                 .stream()
                                 .filter(method -> parameterType(method.fst, method.snd, fullActuals.size(), true).findAny().isPresent())
-                                .toList();
+                                .collect(Collectors.toList());
                 }
 
                 elements = Util.stream(candidates).map(method -> method.fst);
@@ -1262,17 +1307,21 @@ class SourceCodeAnalysisImpl extends SourceCodeAnalysis {
                     el.asType().getKind() == TypeKind.ERROR ||
                     (el.getKind() == ElementKind.PACKAGE && el.getEnclosedElements().isEmpty())) {
                     //erroneous element:
-                    return Collections.emptyList();
+                    if (context == CompletionContext.SNIPPET) {
+                        return Collections.emptyList();
+                    } else {
+                        elements = Util.stream(methodCandidates(at, context, tp)).map(method -> method.fst);
+                    }
+                } else {
+                    Predicate<Element> accessibility = createAccessibilityFilter(at, tp);
+
+                    if (!accessibility.test(el)) {
+                        //not accessible
+                        return Collections.emptyList();
+                    }
+
+                    elements = Stream.of(el);
                 }
-
-                Predicate<Element> accessibility = createAccessibilityFilter(at, tp);
-
-                if (!accessibility.test(el)) {
-                    //not accessible
-                    return Collections.emptyList();
-                }
-
-                elements = Stream.of(el);
             } else {
                 return Collections.emptyList();
             }
@@ -1282,7 +1331,7 @@ class SourceCodeAnalysisImpl extends SourceCodeAnalysis {
             try (JavadocHelper helper = JavadocHelper.create(at.task, findSources())) {
                 result = elements.map(el -> constructDocumentation(at, helper, el, computeJavadoc))
                                  .filter(Objects::nonNull)
-                                 .toList();
+                                 .collect(Collectors.toList());
             } catch (IOException ex) {
                 proc.debug(ex, "JavadocHelper.close()");
             }
@@ -1304,7 +1353,30 @@ class SourceCodeAnalysisImpl extends SourceCodeAnalysis {
             proc.debug(ex, "SourceCodeAnalysisImpl.element2String(..., " + el + ")");
         }
         String signature = Util.expunge(elementHeader(at, el, !hasSyntheticParameterNames(el), true));
-        return new DocumentationImpl(signature,  javadoc);
+        String moduleName = at.getElements().getModuleOf(el).getQualifiedName().toString();
+        String typeName;
+        String anchor;
+        if (el.getKind().isClass() || el.getKind().isInterface()) {
+            typeName = ((QualifiedNameable) el).getQualifiedName().toString();
+            anchor = null;
+        } else {
+            typeName = ((QualifiedNameable) el.getEnclosingElement()).getQualifiedName().toString();
+            anchor = switch (el.getKind()) {
+                case METHOD -> {
+                    yield el.getSimpleName() + "(" + ((ExecutableElement) el).getParameters().stream().map(p -> p.asType()).map(Object::toString).collect(Collectors.joining(",")) + ")";
+                }
+                default -> null;
+            };
+        }
+        String baseURL = BASE_DOCUMENTATION_URI.get();
+        URI uri;
+        try {
+            uri = new URL(baseURL + moduleName + "/" + typeName.replace(".", "/") + ".html" + (anchor != null ? "#" + anchor : "")).toURI();
+        } catch (MalformedURLException | URISyntaxException ex) {
+            proc.debug(ex, "SourceCodeAnalysisImpl.element2String(..., " + el + ")");
+            uri = null;
+        }
+        return new DocumentationImpl(signature,  javadoc, uri);
     }
 
     public void close() {
@@ -1321,10 +1393,12 @@ class SourceCodeAnalysisImpl extends SourceCodeAnalysis {
 
         private final String signature;
         private final String javadoc;
+        private final URI uri;
 
-        public DocumentationImpl(String signature, String javadoc) {
+        public DocumentationImpl(String signature, String javadoc, URI uri) {
             this.signature = signature;
             this.javadoc = javadoc;
+            this.uri = uri;
         }
 
         @Override
@@ -1335,6 +1409,11 @@ class SourceCodeAnalysisImpl extends SourceCodeAnalysis {
         @Override
         public String javadoc() {
             return javadoc;
+        }
+
+        @Override
+        public URI uri() {
+            return uri;
         }
 
     }
@@ -1585,7 +1664,7 @@ class SourceCodeAnalysisImpl extends SourceCodeAnalysis {
                                        .distinct()
                                        .filter(fqn -> isAccessible(at, scope, fqn))
                                        .sorted()
-                                       .toList();
+                                       .collect(Collectors.toList());
             }
 
             return new QualifiedNames(result, simpleName.length(), upToDate, !erroneous);
@@ -1934,4 +2013,15 @@ class SourceCodeAnalysisImpl extends SourceCodeAnalysis {
         }
     }
 
+    private static Supplier<String> BASE_DOCUMENTATION_URI = () -> {
+        Runtime.Version version = Runtime.version();
+        String template;
+        //based on URLs hardcoded in javadoc:
+        if (version.pre().isPresent()) {
+            template = "https://download.java.net/java/early_access/jdk{0}/docs/api/";
+        } else {
+            template = "https://docs.oracle.com/en/java/javase/{0}/docs/api/";
+        }
+        return template.replace("{0}", String.valueOf(version.feature()));
+    };
 }
